--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
             <input id='invert_hours_checkbox' type='checkbox' class='item-toggle'>
         </label>
         
+        <label class="item">
+            Background Texture
+            <select name="select-1" dir='rtl' class="item-select">
+                <option class="item-select-option">None</option>
+                <option class="item-select-option" selected>1</option>
+                <option class="item-select-option">2</option>
+            </select>
+        </label>
+        
     </div>
     <div class='item-container-footer'>
     </div>
