--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
        invert_hours_switch.checked = JSON.parse(localStorage['invert_hours']);
        minutes_ColorPicker.value = localStorage['minutes_color'];
        hours_ColorPicker.value = localStorage['hours_color'];
-       btx_selector.value = localStorage['btx_selector'];
+       // btx_selector.value = localStorage['btx_selector'];
        }
        })();
 
