--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
         </label>
         
         <label class="item">
+      Example Item
+      <select name="select-1" dir='rtl' class="item-select">
+        <option class="item-select-option">Both</option>
+        <option class="item-select-option" selected>Major only</option>
+        <option class="item-select-option">Minor only</option>
+      </select>
+    </label>
+    
+        <label class="item">
             Background Pattern
             <select id='btx_selector' name="select-1" dir='rtl' class="item-select">
                 <option class="item-select-option">None</option>
