--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@ colors_Button_2.addEventListener('click',
      localStorage['invert_hours'] = options['invert_hours'];
      localStorage['minutes_color'] = options['minutes_color'];
      localStorage['hours_color'] = options['hours_color'];
+     localStorage['btx_selector'] = options['btx_selector'];
      
      console.log('Got options: ' + JSON.stringify(options));
      return options;
