--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
          invert_hours_switch.checked = JSON.parse(localStorage['invert_hours']);
          minutes_ColorPicker.value = localStorage['minutes_color'];
          hours_ColorPicker.value = localStorage['hours_color'];
-         // btx_selector.value = localStorage['btx_selector'];
+         btx_selector.value = localStorage['btx_selector'];
          }
          })();
          
@@ -169,7 +169,7 @@ colors_Button_2.addEventListener('click',
      var btx_selector_int = 0;
      if (btx_selector === 'Dots') {
          btx_selector_int = 1;
-     } else if (btx_selector =='Squares') {
+     } else if (btx_selector === 'Squares') {
          btx_selector_int = 2;
      }
      var options = {
