--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@ colors_Button_2.addEventListener('click',
                                  
                                  minutes_off_switch.checked = true;
                                  invert_hours_switch.checked = true;
-                                 minutes_ColorPicker.value = '0x00FF00';
-                                 hours_ColorPicker.value = '0x00FF00';
+                                 minutes_ColorPicker.value = '0xffeeab';
+                                 hours_ColorPicker.value = '0x5555FF';
                                  btx_selector.value = 'None';
                                  
                                  $('.item-color').change();
